--- a/materials/index.html
+++ b/materials/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materiales</title>
+    <title>FastDL para IOS Central America</title>
 </head>
 <body>
-    <h1>Archivos de Materiales</h1>
+    <h1>FastDL para IOS Central America</h1>
+    <p>Navega por las carpetas para acceder a los archivos:</p>
     <ul>
-        <li><a href="models/">models/</a></li> <!-- Enlace a la carpeta models -->
-        <li><a href="archivo1.ext">archivo1.ext</a></li> <!-- Enlace a un archivo en la carpeta -->
-        <li><a href="archivo2.ext">archivo2.ext</a></li> <!-- Enlace a otro archivo -->
+        <li><a href="materials/">Materiales</a></li> <!-- Enlace a la carpeta materials -->
+        <li><a href="models/">Modelos</a></li> <!-- Enlace a la carpeta models -->
+        <li><a href="player/">Jugadores</a></li> <!-- Enlace a la carpeta player -->
+        <li><a href="custom/">Personalizados</a></li> <!-- Enlace a la carpeta custom -->
+        <li><a href="teamkits/">Kits de equipo</a></li> <!-- Enlace a la carpeta teamkits -->
     </ul>
 </body>
 </html>
