--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <title>FastDL Files</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FastDL para IOS Central America</title>
 </head>
 <body>
     <h1>FastDL para IOS Central America</h1>
-    <p>Navega por las carpetas para acceder a los archivos.</p>
+    <p>Navega por las carpetas para acceder a los archivos:</p>
+    <ul>
+        <li><a href="materials/">Materiales</a></li> <!-- Enlace a la carpeta materials -->
+        <li><a href="models/">Modelos</a></li> <!-- Enlace a la carpeta models -->
+        <li><a href="player/">Jugadores</a></li> <!-- Enlace a la carpeta player -->
+        <li><a href="custom/">Personalizados</a></li> <!-- Enlace a la carpeta custom -->
+        <li><a href="teamkits/">Kits de equipo</a></li> <!-- Enlace a la carpeta teamkits -->
+    </ul>
 </body>
 </html>
