--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>FastDL para IOS Central America</title>
 </head>
 <body>
-    <h1>FastDL para IOS Central America</h1>
-    <p>Navega por las carpetas para acceder a los archivos:</p>
+    <h1>Bienvenido a FastDL para IOS Central America</h1>
+    <p>Aquí puedes encontrar los archivos necesarios para el servidor. Navega por las carpetas para acceder a los archivos:</p>
     <ul>
-        <li><a href="materials/">Materiales</a></li> <!-- Enlace a la carpeta materials -->
-        <li><a href="models/">Modelos</a></li> <!-- Enlace a la carpeta models -->
-        <li><a href="player/">Jugadores</a></li> <!-- Enlace a la carpeta player -->
-        <li><a href="custom/">Personalizados</a></li> <!-- Enlace a la carpeta custom -->
-        <li><a href="teamkits/">Kits de equipo</a></li> <!-- Enlace a la carpeta teamkits -->
+        <li><a href="materials/">materials</a></li>
     </ul>
 </body>
 </html>
+
