--- a/materials/index.html
+++ b/materials/index.html
@@ -10,6 +10,7 @@
     <p>Navega a la siguiente carpeta:</p>
     <ul>
         <li><a href="models/">models</a></li>
+        <a class="icon dir" href="https://richienxt.github.io/IOS-Central-America-FL-fastdl/materials/models/player/custom/teamkits/CnT_kits_away/">CnT_kits_away/</a>
     </ul>
 </body>
 </html>
