--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Índice de C:\Users\Richie\source\repos\IOS-Central-America-FL-fastdl\IOS-Central-America-FL-fastdl\materials\</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!-- Google Material Icons -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,6 +34,11 @@
             background-color: #f2f2f2;
         }
 
+        .icon {
+            vertical-align: middle;
+            margin-right: 8px;
+        }
+
         .dir {
             font-weight: bold;
             color: blue;
@@ -43,8 +49,14 @@
             color: black;
         }
 
-        .icon {
-            text-decoration: none;
+        .icon-dir {
+            font-size: 20px;
+            color: #4CAF50; /* Verde para carpeta */
+        }
+
+        .icon-file {
+            font-size: 20px;
+            color: #2196F3; /* Azul para archivo */
         }
 
         .up {
@@ -77,12 +89,12 @@
         <tbody id="tbody">
             <!-- Filas de carpetas y archivos -->
             <tr>
-                <td data-value="models/"><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">models/</a></td>
+                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">models/</a></td>
                 <td class="detailsColumn" data-value="0"></td>
                 <td class="detailsColumn" data-value="1737610307">23/1/25, 0:31:47</td>
             </tr>
             <tr>
-                <td data-value="index.html"><a class="icon file" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/index.html">index.html</a></td>
+                <td data-value="index.html"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/index.html">index.html</a></td>
                 <td class="detailsColumn" data-value="358">358 B</td>
                 <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
             </tr>
