--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         .icon-dir {
             font-size: 20px;
-            color: #4CAF50; /* Verde para carpeta */
+            color: #F8D775; /* Verde para carpeta */
         }
 
         .icon-file {
@@ -68,11 +68,11 @@
 </head>
 <body>
 
-    <h1>Índice de C:\Users\Richie\source\repos\IOS-Central-America-FL-fastdl\IOS-Central-America-FL-fastdl\materials\</h1>
+    <h1>Índice de richienxt.github.io/IOS-Central-America-FL-fastdl/</h1>
 
     <!-- Enlace a la carpeta principal -->
     <div id="parentDirLinkBox" style="display: block;">
-        <a id="parentDirLink" class="icon up" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/..">
+        <a id="parentDirLink" class="icon up" href="https://richienxt.github.io/IOS-Central-America-FL-fastdl/">
             <span id="parentDirText">[directorio principal]</span>
         </a>
     </div>
@@ -83,7 +83,7 @@
             <tr class="header" id="theader">
                 <th id="nameColumnHeader" tabindex="0" role="button">Nombre</th>
                 <th id="sizeColumnHeader" class="detailsColumn" tabindex="0" role="button">Tamaño</th>
-                <th id="dateColumnHeader" class="detailsColumn" tabindex="0" role="button">Fecha de modificación</th>
+                <th id="dateColumnHeader" class="detailsColumn" tabindex="0" role="button">Fecha de modificación (GMT-5)</th>
             </tr>
         </thead>
         <tbody id="tbody">
