--- a/index.html
+++ b/index.html
@@ -89,14 +89,9 @@
         <tbody id="tbody">
             <!-- Filas de carpetas y archivos -->
             <tr>
-                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">models/</a></td>
+                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">materials/</a></td>
                 <td class="detailsColumn" data-value="0"></td>
                 <td class="detailsColumn" data-value="1737610307">23/1/25, 0:31:47</td>
-            </tr>
-            <tr>
-                <td data-value="index.html"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/index.html">index.html</a></td>
-                <td class="detailsColumn" data-value="358">358 B</td>
-                <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
             </tr>
         </tbody>
     </table>
