--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 
-    <h1>Índice de richienxt.github.io/IOS-Central-America-FL-fastdl/</h1>
+    <h1>Índice de richienxt.github.io/IOS-Central-America-fastdl/</h1>
 
     <!-- Enlace a la carpeta principal -->
     <div id="parentDirLinkBox" style="display: block;">
@@ -83,6 +83,7 @@
             <tr class="header" id="theader">
                 <th id="nameColumnHeader" tabindex="0" role="button">Nombre</th>
                 <th id="sizeColumnHeader" class="detailsColumn" tabindex="0" role="button">Tamaño</th>
+                <th id="autorColumnHeader" class="detailsColumn" tabindex="0" role="button">Hecho por</th>
                 <th id="dateColumnHeader" class="detailsColumn" tabindex="0" role="button">Fecha de modificación (GMT-5)</th>
             </tr>
         </thead>
@@ -90,8 +91,6 @@
             <!-- Filas de carpetas y archivos -->
             <tr>
                 <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">materials/</a></td>
-                <td class="detailsColumn" data-value="0"></td>
-                <td class="detailsColumn" data-value="1737610307">23/1/25, 0:31:47</td>
             </tr>
         </tbody>
     </table>
