--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <tbody id="tbody">
             <!-- Filas de carpetas y archivos -->
             <tr>
-                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">materials/</a></td>
+                <td data-value="materials/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">materials/</a></td>
+                <td data-value="maps/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/materials/models/">maps/</a></td>
             </tr>
         </tbody>
     </table>
