--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <tbody id="tbody">
             <!-- Filas de carpetas y archivos -->
             <tr>
-                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/materials">materials/</a></td>
+                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="materials/">materials/</a></td>
             </tr>
             <tr>
-                <td data-value="maps/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="/C:/Users/Richie/source/repos/IOS-Central-America-FL-fastdl/IOS-Central-America-FL-fastdl/maps/">maps/</a></td>
+                <td data-value="maps/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="maps/">maps/</a></td>
             </tr>
         </tbody>
     </table>
