--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Índice de C:\Users\Richie\source\repos\IOS-Central-America-FL-fastdl\IOS-Central-America-FL-fastdl\materials\</title>
+    <title>Activos Personalizados IOSCA</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!-- Google Material Icons -->
     <style>
         body {
@@ -51,12 +51,12 @@
 
         .icon-dir {
             font-size: 20px;
-            color: #F8D775; /* Verde para carpeta */
+            color: #F8D775;
         }
 
         .icon-file {
             font-size: 20px;
-            color: #2196F3; /* Azul para archivo */
+            color: #2196F3;
         }
 
         .up {
@@ -97,6 +97,5 @@
             </tr>
         </tbody>
     </table>
-
 </body>
 </html>
