--- a/maps/index.html
+++ b/maps/index.html
@@ -90,7 +90,7 @@
         <tbody id="tbody">
             <!-- Filas de carpetas y archivos -->
             <tr>
-                <td data-value="6v6_victoria_lite.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="/6v6_victoria_lite.bsp">index.html</a></td>
+                <td data-value="6v6_victoria_lite.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="/6v6_victoria_lite.bsp">6v6_victoria_lite.bsp</a></td>
                 <td class="detailsColumn" data-value="358">25.1 MB</td>
                 <td class="detailsColumn" data-value="358">Richie</td>
                 <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
