--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <tbody id="tbody">
             <!-- Filas de carpetas y archivos -->
             <tr>
-                <td data-value="models/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="materials/">materials/</a></td>
+                <td data-value="materials/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="materials/">materials/</a></td>
             </tr>
             <tr>
                 <td data-value="maps/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="maps/">maps/</a></td>
