--- a/materials/models/player/custom/teamkits/index.html
+++ b/materials/models/player/custom/teamkits/index.html
@@ -92,13 +92,13 @@
             <tr>
                 <td data-value="iosca_generic_away/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="iosca_generic_away/">iosca_generic_away/</a></td>
                 <td class="detailsColumn" data-value="358">12.0 MB</td>
-                <td class="detailsColumn" data-value="358">kobbeh — </td>
+                <td class="detailsColumn" data-value="358">Kobbeh</td>
                 <td class="detailsColumn" data-value="1737610873">23/1/25, 2:10:03</td>
             </tr>
             <tr>
                 <td data-value="iosca_generic_home/"><span class="material-icons icon-dir">folder</span><a class="icon dir" href="iosca_generic_home/">iosca_generic_home/</a></td>
                 <td class="detailsColumn" data-value="358">12.0 MB</td>
-                <td class="detailsColumn" data-value="358">kobbeh — </td>
+                <td class="detailsColumn" data-value="358">Kobbeh</td>
                 <td class="detailsColumn" data-value="1737610873">23/1/25, 2:10:03</td>
             </tr>
         </tbody>
