--- a/maps/index.html
+++ b/maps/index.html
@@ -95,6 +95,31 @@
                 <td class="detailsColumn" data-value="358">Richie</td>
                 <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
             </tr>
+            <tr>
+                <td data-value="6v6_campo_fix.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="./6v6_campo_fix.bsp">6v6_campo_fix.bsp</a></td>
+                <td class="detailsColumn" data-value="358">30.6 MB</td>
+                <td class="detailsColumn" data-value="358"></td>
+                <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
+            </tr>
+            <tr>
+                <td data-value="6v6_eng_arena.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="./6v6_eng_arena.bsp">6v6_eng_arena.bsp</a></td>
+                <td class="detailsColumn" data-value="358">28.1 MB</td>
+                <td class="detailsColumn" data-value="358"></td>
+                <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
+            </tr>
+            <tr>
+                <td data-value="6v6_minecraft.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="./6v6_minecraft.bsp">6v6_minecraft.bsp</a></td>
+                <td class="detailsColumn" data-value="358">15.4 MB</td>
+                <td class="detailsColumn" data-value="358"></td>
+                <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
+            </tr>
+            <tr>
+                <td data-value="6v6_miramar.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="./6v6_miramar.bsp">6v6_miramar.bsp</a></td>
+                <td class="detailsColumn" data-value="358">39.2 MB</td>
+                <td class="detailsColumn" data-value="358">Richie</td>
+                <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
+            </tr>
+
         </tbody>
     </table>
 </body>
