--- a/maps/index.html
+++ b/maps/index.html
@@ -113,7 +113,12 @@
                 <td class="detailsColumn" data-value="358">Richie</td>
                 <td class="detailsColumn" data-value="1737610873">23/1/25, 0:41:13</td>
             </tr>
-
+            <tr>
+                <td data-value="6v6_miramar.bsp"><span class="material-icons icon-file">insert_drive_file</span><a class="icon file" href="./2v2_volta.bsp">2v2_volta.bsp</a></td>
+                <td class="detailsColumn" data-value="358">35.5 MB</td>
+                <td class="detailsColumn" data-value="358">Richie</td>
+                <td class="detailsColumn" data-value="1737610873">31/3/25, 13:03:50</td>
+            </tr>
         </tbody>
     </table>
 </body>
